# bi-project

./: .gitignore  README.md  chart_builder.py  db.py  main.py  pipeline.py  pyproject.toml  tools.py
agents/: __init__.py  chart_agent.py  explainer_agent.py  insight_agent.py  sql_agent.py  transcriber.py  validator_agent.py
static/: app.js  index.html
